src/program/graphql/tests/references/schema/(schema) - defined-first -- should be able to define schema first and the the associated root types.errors
schema {
    query: Query
}

type Query {
    error: Error
           ~~~~~ (6, 12, 5)
!!! Type 'Error' is not defined.
}